# ipydeps

./: .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml  run_tests.sh  setup.py  tox.ini  update_stdlib_list.py
.github/workflows/: python-package.yml  test.yml
ipydeps/: __init__.py  __main__.py  config.py  ipydeps.py  logger.py  utils.py
ipydeps/data/: libs2.txt  libs3.txt
scripts/: generate_version.py
tests/: test_ipydeps.py  test_stdlib.py
